@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-27T00:55:58Z",
-  "count_outdated" : 435,
-  "uniques_outdated" : 34,
-  "count" : 449,
-  "uniques" : 40,
+  "timestamp" : "2022-07-28T08:13:01Z",
+  "count_outdated" : 438,
+  "uniques_outdated" : 35,
+  "count" : 450,
+  "uniques" : 41,
   "views" : [
-    {
-      "timestamp": "2022-07-14T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-18T00:00:00Z",
       "count": 3,
@@ -44,6 +37,13 @@
       "timestamp": "2022-07-22T00:00:00Z",
       "count": 5,
       "count_minmax": [ 1, 5 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
