@@ -1,12 +1,7 @@
 {
-  "count": 14,
+  "count": 12,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-07-14T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-18T00:00:00Z",
       "count": 3,
@@ -30,6 +25,11 @@
     {
       "timestamp": "2022-07-22T00:00:00Z",
       "count": 5,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-28T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
